[gd_scene load_steps=21 format=2]

[ext_resource path="res://sprites/troll/Enemy 20.png" type="Texture" id=1]
[ext_resource path="res://sprites/troll/death_troll.png" type="Texture" id=2]
[ext_resource path="res://Troll.gd" type="Script" id=3]
[ext_resource path="res://sprites/troll/EnemyDeath.png" type="Texture" id=4]

[sub_resource type="CircleShape2D" id=4]
radius = 12.2832

[sub_resource type="AtlasTexture" id=5]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 32, 32, 32 )

[sub_resource type="AtlasTexture" id=6]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 32, 32, 32, 32 )

[sub_resource type="AtlasTexture" id=7]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 64, 32, 32, 32 )

[sub_resource type="AtlasTexture" id=8]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 64, 32, 32 )

[sub_resource type="AtlasTexture" id=9]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 32, 64, 32, 32 )

[sub_resource type="AtlasTexture" id=10]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 64, 64, 32, 32 )

[sub_resource type="AtlasTexture" id=11]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 96, 32, 32 )

[sub_resource type="AtlasTexture" id=12]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 32, 96, 32, 32 )

[sub_resource type="AtlasTexture" id=13]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 64, 96, 32, 32 )

[sub_resource type="AtlasTexture" id=14]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=15]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=16]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 64, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=17]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 0, 50, 96, 25 )

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ SubResource( 5 ), SubResource( 6 ), SubResource( 7 ) ],
"loop": true,
"name": "left",
"speed": 5.0
}, {
"frames": [ SubResource( 8 ), SubResource( 9 ), SubResource( 10 ) ],
"loop": true,
"name": "right",
"speed": 5.0
}, {
"frames": [ SubResource( 11 ), SubResource( 12 ), SubResource( 13 ) ],
"loop": true,
"name": "up",
"speed": 5.0
}, {
"frames": [ SubResource( 14 ), SubResource( 15 ), SubResource( 16 ) ],
"loop": true,
"name": "down",
"speed": 5.0
}, {
"frames": [ SubResource( 17 ) ],
"loop": false,
"name": "death",
"speed": 1.0
} ]

[sub_resource type="CircleShape2D" id=3]
radius = 9.92423

[node name="Troll" type="KinematicBody2D"]
position = Vector2( 94.1791, 46.9321 )
input_pickable = true
script = ExtResource( 3 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -0.184005, 1.93246 )
shape = SubResource( 4 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
show_behind_parent = true
frames = SubResource( 2 )
animation = "down"

[node name="death_sprite" type="Sprite" parent="."]
visible = false
show_behind_parent = true
texture = ExtResource( 2 )

[node name="death_troll_timer" type="Timer" parent="."]
wait_time = 7.0

[node name="FollowPlayer" type="Area2D" parent="."]
show_behind_parent = true
position = Vector2( 0.297302, 1.04056 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="FollowPlayer"]
position = Vector2( -0.00794953, 0.990986 )
shape = SubResource( 3 )

[connection signal="input_event" from="." to="." method="_on_Troll_input_event"]
[connection signal="tree_entered" from="." to="." method="_on_Troll_tree_entered"]
[connection signal="timeout" from="death_troll_timer" to="." method="_on_death_troll_timer_timeout"]
[connection signal="body_entered" from="FollowPlayer" to="." method="_on_FollowPlayer_body_entered"]
